// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> Should render correctly 1`] = `
.c0 {
  position: relative;
  min-width: 5rem;
  padding: 0.43rem 1.125rem 0.32rem 1.125rem;
  -webkit-transition: filter 0.3s;
  transition: filter 0.3s;
  border: none;
  border-radius: 0.5rem;
  font-size: 1.4rem;
  font-weight: normal;
  cursor: pointer;
  -webkit-text-decoration-color: transparent;
  text-decoration-color: transparent;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  background-color: #0067B7;
  color: white;
  box-shadow: none;
  display: inline-block;
}

.c0:focus-visible {
  outline: none !important;
}

.c0:focus-visible::after {
  position: absolute;
  top: -0.35rem;
  right: -0.35rem;
  bottom: -0.35rem;
  left: -0.35rem;
  content: '';
  display: block;
  border: solid #44aeff 0.2rem;
  border-radius: 0.5rem;
  pointer-events: none;
}

.c0:focus,
.c0:hover {
  background-color: #004F8C;
  color: white;
  box-shadow: none;
}

.c0:active {
  background-color: #003E6F;
  color: white;
}

.c0:disabled {
  background-color: #cdcdd7;
  color: #646464;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

@media (prefers-color-scheme:dark) {
  .c0:focus-visible::after {
    border-color: #ffffff;
  }
}

@media (prefers-color-scheme:dark) {
  .c0 {
    background-color: #025CA2;
    color: white;
    box-shadow: none;
  }
}

@media (prefers-color-scheme:dark) {
  .c0:focus,
  .c0:hover {
    background-color: #004479;
    color: white;
    box-shadow: none;
  }
}

@media (prefers-color-scheme:dark) {
  .c0:active {
    background-color: #003965;
    color: white;
  }
}

@media (prefers-color-scheme:dark) {
  .c0:disabled {
    background-color: #595959;
    color: #a9a9a9;
  }
}

<div>
  <a
    class="c0"
    href="/test"
  >
    <span
      class="c1"
    />
  </a>
</div>
`;

exports[`<Button /> Should render correctly hrefExternal 1`] = `
.c0 {
  position: relative;
  min-width: 5rem;
  padding: 0.43rem 1.125rem 0.32rem 1.125rem;
  -webkit-transition: filter 0.3s;
  transition: filter 0.3s;
  border: none;
  border-radius: 0.5rem;
  font-size: 1.4rem;
  font-weight: normal;
  cursor: pointer;
  -webkit-text-decoration-color: transparent;
  text-decoration-color: transparent;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  background-color: #0067B7;
  color: white;
  box-shadow: none;
  display: inline-block;
}

.c0:focus-visible {
  outline: none !important;
}

.c0:focus-visible::after {
  position: absolute;
  top: -0.35rem;
  right: -0.35rem;
  bottom: -0.35rem;
  left: -0.35rem;
  content: '';
  display: block;
  border: solid #44aeff 0.2rem;
  border-radius: 0.5rem;
  pointer-events: none;
}

.c0:focus,
.c0:hover {
  background-color: #004F8C;
  color: white;
  box-shadow: none;
}

.c0:active {
  background-color: #003E6F;
  color: white;
}

.c0:disabled {
  background-color: #cdcdd7;
  color: #646464;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

@media (prefers-color-scheme:dark) {
  .c0:focus-visible::after {
    border-color: #ffffff;
  }
}

@media (prefers-color-scheme:dark) {
  .c0 {
    background-color: #025CA2;
    color: white;
    box-shadow: none;
  }
}

@media (prefers-color-scheme:dark) {
  .c0:focus,
  .c0:hover {
    background-color: #004479;
    color: white;
    box-shadow: none;
  }
}

@media (prefers-color-scheme:dark) {
  .c0:active {
    background-color: #003965;
    color: white;
  }
}

@media (prefers-color-scheme:dark) {
  .c0:disabled {
    background-color: #595959;
    color: #a9a9a9;
  }
}

<div>
  <a
    class="c0"
    href="https://duckduckgo.com/"
    rel="noopener noreferrer"
    target="_blank"
  >
    <span
      class="c1"
    />
  </a>
</div>
`;

exports[`<Button /> Should render with nextified href 1`] = `
.c0 {
  position: relative;
  min-width: 5rem;
  padding: 0.43rem 1.125rem 0.32rem 1.125rem;
  -webkit-transition: filter 0.3s;
  transition: filter 0.3s;
  border: none;
  border-radius: 0.5rem;
  font-size: 1.4rem;
  font-weight: normal;
  cursor: pointer;
  -webkit-text-decoration-color: transparent;
  text-decoration-color: transparent;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  background-color: #0067B7;
  color: white;
  box-shadow: none;
  display: inline-block;
}

.c0:focus-visible {
  outline: none !important;
}

.c0:focus-visible::after {
  position: absolute;
  top: -0.35rem;
  right: -0.35rem;
  bottom: -0.35rem;
  left: -0.35rem;
  content: '';
  display: block;
  border: solid #44aeff 0.2rem;
  border-radius: 0.5rem;
  pointer-events: none;
}

.c0:focus,
.c0:hover {
  background-color: #004F8C;
  color: white;
  box-shadow: none;
}

.c0:active {
  background-color: #003E6F;
  color: white;
}

.c0:disabled {
  background-color: #cdcdd7;
  color: #646464;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

@media (prefers-color-scheme:dark) {
  .c0:focus-visible::after {
    border-color: #ffffff;
  }
}

@media (prefers-color-scheme:dark) {
  .c0 {
    background-color: #025CA2;
    color: white;
    box-shadow: none;
  }
}

@media (prefers-color-scheme:dark) {
  .c0:focus,
  .c0:hover {
    background-color: #004479;
    color: white;
    box-shadow: none;
  }
}

@media (prefers-color-scheme:dark) {
  .c0:active {
    background-color: #003965;
    color: white;
  }
}

@media (prefers-color-scheme:dark) {
  .c0:disabled {
    background-color: #595959;
    color: #a9a9a9;
  }
}

<div>
  <a
    class="c0"
    href="/blog/test"
  >
    <span
      class="c1"
    />
  </a>
</div>
`;
